--- a/doc/proj_5_code.ipynb
+++ b/doc/proj_5_code.ipynb
@@ -251,6 +251,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "confirm the selection of p,d,q based on ACF and PACF"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
